--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -3,7 +3,7 @@
   max-width: 340px;
   min-width: 280px;
 
-  & img {
+  img {
     max-width: 100%;
     max-height: 366px;
     aspect-ratio: 2/3;
