add button component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,11 @@ a {
   text-decoration: none;
 }
 
+button {
+  all: unset;
+  cursor: pointer;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
