--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,10 +1,15 @@
 .container {
   display: flex;
+  align-items: center;
   justify-content: center;
+  min-height: 2rem;
   padding: 0.5rem 1rem;
   color: #f0f0f0;
-  font-size: 2rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  letter-spacing: 0.2em;
   text-align: center;
+  text-transform: uppercase;
   background-color: #222222;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
