--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -1,11 +1,46 @@
 .container {
   display: grid;
-  max-width: 340px;
+  grid-template-rows: auto 1fr auto;
+  gap: 1rem;
   min-width: 280px;
+  padding: 0.5rem;
+  background-color: #d9d9d9;
+  border-radius: 1rem;
+  overflow: hidden;
+
+  @media (min-width: 420px) {
+    max-width: 340px;
+  }
+}
+
+.imageContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  background-color: #222222;
 
   img {
     max-width: 100%;
-    max-height: 366px;
+    max-height: 300px;
     aspect-ratio: 2/3;
+    object-fit: cover;
   }
+}
+
+.content {
+  h3 {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.footer {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.priceTag {
+  font-size: 1.25rem;
+  text-align: center;
 }
