--- a/src/modules/products/products.module.scss
+++ b/src/modules/products/products.module.scss
@@ -1,13 +1,34 @@
-.productsGrid {
+@keyframes ping-pong {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.sectionContainer {
+  padding: 1.5rem 1rem;
+}
+
+.container {
   display: grid;
   grid-template-columns: 1fr;
+  gap: 1rem;
   margin: 0;
   padding: 0;
   list-style: none;
 
   @media (min-width: 620px) {
     grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
+    gap: 1.5rem 1rem;
+    max-width: max-content;
+    margin: 0 auto;
   }
 
   @media (min-width: 1024px) {
@@ -16,7 +37,54 @@
 
   & > li {
     display: flex;
-    align-items: center;
     justify-content: center;
+  }
+}
+
+.loaderContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 4rem;
+}
+
+.loader {
+  position: relative;
+  width: 4rem;
+  height: 0.8rem;
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 0.4rem;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 2rem;
+    height: 0.8rem;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    animation: ping-pong 1000ms ease-in-out 0s infinite;
+  }
+}
+
+.endOfList {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem 0 4rem;
+  color: #e2e2e2;
+
+  &::before,
+  &::after {
+    content: "";
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background-color: #444444;
   }
 }
