update review styles

--- a/src/components/review-card/review-card.module.scss
+++ b/src/components/review-card/review-card.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 1.5rem 1rem;
   font-size: 0.8rem;
   background-color: #d9d9d9;
