--- a/src/modules/reviews/reviews.module.scss
+++ b/src/modules/reviews/reviews.module.scss
@@ -1,10 +1,24 @@
-.container {
+.sectionContainer {
   padding: 1.5rem 1rem;
 }
 
-.reviewsGrid {
+.container {
   display: grid;
   gap: 1.5rem;
   margin: 0;
   list-style: none;
+
+  @media (min-width: 640px) {
+    grid-template-columns: repeat(2, 300px);
+    gap: 1.5rem 1rem;
+    justify-content: center;
+
+    & > li {
+      display: flex;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(3, 340px);
+  }
 }
