--- a/src/modules/cart/cart.module.scss
+++ b/src/modules/cart/cart.module.scss
@@ -1,10 +1,13 @@
 .sectionContainer {
-  padding: 1.5rem 1rem;
+  margin: 2rem 0;
+  padding: 1rem;
 }
 
 .container {
   display: grid;
   gap: 0.75rem;
+  max-width: 640px;
+  margin: 0 auto;
   padding: 1.5rem 1rem;
   background-color: #d9d9d9;
   border-radius: 1rem;
@@ -19,4 +22,9 @@
 .cartForm {
   display: grid;
   gap: 0.5rem;
+
+  @media (min-width: 1024px) {
+    grid-template-columns: 210px 1fr;
+    gap: 1rem;
+  }
 }
