--- a/src/components/cart-item/cart-item.module.scss
+++ b/src/components/cart-item/cart-item.module.scss
@@ -1,3 +1,7 @@
 .container {
   display: grid;
+  grid-template-columns: 2fr auto 1fr;
+  gap: 1rem;
+  padding-bottom: 0.25rem;
+  border-bottom: 1px solid #bcbcbc;
 }
