--- a/src/components/phone-input/phone-input.module.scss
+++ b/src/components/phone-input/phone-input.module.scss
@@ -1,8 +1,24 @@
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: #222222;
+  border-radius: 0.5rem;
+}
+
 .input {
+  display: flex;
+  width: 100%;
+  min-width: 100px;
+  height: 100%;
   margin: 0;
   padding: 0.5rem 0.75rem;
-  font-size: 1.25rem;
+  color: inherit;
+  font-family: var(--font-mono);
+  font-size: 1rem;
   font-weight: 500;
+  background: none;
   border: none;
   border-radius: 0.5rem;
   appearance: none;
