--- a/src/modules/products/products.module.scss
+++ b/src/modules/products/products.module.scss
@@ -76,7 +76,8 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0 4rem;
+  max-width: 1024px;
+  margin: 2rem auto 4rem;
   color: #e2e2e2;
 
   &::before,
